# serendipity

./: .env.template  .gitignore  Cargo.toml  Makefile  build.rs  example_config.ron
src/: checks.rs  config.rs  errors.rs  events.rs  helpers.rs  main.rs  time.rs
src/commands/: hello.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  seek.rs  skip.rs  stats.rs  stop.rs
src/commands/misc/: mod.rs  pkm_types.rs  teams.rs
src/commands/music/: join.rs  loops.rs  mod.rs  play.rs
