[package]
name = "serendipity"
version = "0.1.0"
edition = "2021"
authors = ["Merlin <Merlin#7667>"]
description = "A discord bot by Merlin"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
#serenity = { version = "0.11", default-features = false, features = ["builder","cache","client","gateway","http","model","utils","rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uptime_lib = "0.2.2"
built = { version = "0.5", features = ["chrono", "semver"] }
sysinfo = "0.27.1"
env_logger = "0.10.0"
log = "0.4"
#poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next"}
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache"]}
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["builder","cache","client","gateway","http","model","utils","rustls_backend"]}
reqwest = "0.11"
regex = "1.7.0"
is-url = "1.0.4"
rand = "0.8.5"
lazy_static = "1.4.0"
itertools = "0.10.5"
humantime = "2.1"

[dependencies.songbird]
# path = "./dependencies/songbird-next"
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac", "mkv"]

[build-dependencies]
built = { version = "0.5", features = ["git2", "chrono", "semver"] }
